--- a/about.html
+++ b/about.html
@@ -50,12 +50,12 @@
             </a>
           </li>
           <li class="nav-item">
-            <a href="" class="btn btn-dark mt-3 mx-2"> 
+            <a href="project.html" class="btn btn-dark mt-3 mx-2"> 
               Projects
             </a>
           </li>
           <li class="nav-item">
-            <a href="" class="btn btn-dark mt-3 mx-2"> 
+            <a href="now.html" class="btn btn-dark mt-3 mx-2"> 
               Now
             </a>
           </li>
@@ -170,9 +170,9 @@
       <div class="col-md-4 mb-3 mb-md-0">
         <h4>Navigation</h4>
         <ul class="footer-links list-unstyled">
-          <li><a href="#me">About Me</a></li>
-          <li><a href="#projects">Projects</a></li>
-          <li><a href="#contact">Now</a></li>
+          <li><a href="about.html">About Me</a></li>
+          <li><a href="project.html">Projects</a></li>
+          <li><a href="now.html">Now</a></li>
         </ul>
       </div>
       <div class="col-md-4">
