--- a/about.html
+++ b/about.html
@@ -158,38 +158,41 @@
       border-top: 2px solid #333;
     }
   </style>
+
 <footer class="footer py-5">
-  <div class="container">
-    <div class="row text-center">
-      <div class="col-md-4 mb-3 mb-md-0">
-        <h3>Get in Touch</h3>
-        <button  class="btn btn-dark mt-3" data-bs-toggle="modal" data-bs-target="#contactModal">
-          <span class="flashing-text">Say Hello!!!</span>
-        </button>
+    <div class="container">
+      <div class="row text-center">
+        <div class="col-md-4 mb-3 mb-md-0">
+          <h3 style="text-decoration: wavy underline;
+        text-decoration-color: var(--accent)">Get in Touch</h3>
+          <button  class="btn btn-dark mt-3" data-bs-toggle="modal" data-bs-target="#contactModal">
+            <span class="flashing-text">Say Hello!!!</span>
+          </button>
+        </div>
+        <div class="col-md-4 mb-3 mb-md-0">
+          <h4 style="text-decoration: wavy underline;
+        text-decoration-color: var(--accent)">Navigation</h4>
+          <ul class="footer-links list-unstyled">
+            <li><a href="about.html">About Me</a></li>
+            <li><a href="project.html">Projects</a></li>
+            <li><a href="now.html">Now</a></li>
+          </ul>
+        </div>
+        <div class="col-md-4">
+          <h4 style="text-decoration: wavy underline;
+        text-decoration-color: var(--accent)">Connect</h4>
+          <ul class="footer-links list-unstyled">
+            <li><a href="https://github.com/OliseNS" target="_blank">GitHub</a></li>
+            <li><a href="mailto:olisemekanmarkwe@gmail.com">Email</a></li>
+            <li><a href="https://www.linkedin.com/in/olisemekanmarkwe-ds/" target="_blank">LinkedIn</a></li>
+          </ul>
+        </div>
       </div>
-      <div class="col-md-4 mb-3 mb-md-0">
-        <h4>Navigation</h4>
-        <ul class="footer-links list-unstyled">
-          <li><a href="about.html">About Me</a></li>
-          <li><a href="project.html">Projects</a></li>
-          <li><a href="now.html">Now</a></li>
-        </ul>
-      </div>
-      <div class="col-md-4">
-        <h4>Connect</h4>
-        <ul class="footer-links list-unstyled">
-          <li><a href="https://github.com/OliseNS" target="_blank">GitHub</a></li>
-          <li><a href="mailto:olisemekanmarkwe@gmail.com">Email</a></li>
-          <li><a href="" target="_blank">LinkedIn</a></li>
-          <li><a href="" target="_blank">Twitter</a></li>
-        </ul>
+      <div class="text-center mt-4">
+        <p>&copy; 2024 Olisemeka Nmarkwe. All rights reserved.</p>
       </div>
     </div>
-    <div class="text-center mt-4">
-      <p>&copy; 2024 Olisemeka Nmarkwe. All rights reserved.</p>
-    </div>
-  </div>
-</footer>
+  </footer>
 
 <!-- Contact Modal -->
 <div class="modal fade" id="contactModal" tabindex="-1" aria-labelledby="contactModalLabel" aria-hidden="true">
@@ -242,6 +245,7 @@
     </div>
   </div>
 </div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
 
 <script>
   let cooldown = false; // Cooldown flag
