--- a/index.html
+++ b/index.html
@@ -165,8 +165,10 @@
   <div class="container">
     <div class="row text-center">
       <div class="col-md-4 mb-3 mb-md-0">
-        <h3 style="text-decoration: wavy underline;
-      text-decoration-color: var(--accent)">Get in Touch</h3>
+        <h3 style="
+          text-decoration-line: underline;
+          text-decoration-style: wavy;
+          text-decoration-color: var(--accent)">Get in Touch</h3>
         <button  class="btn btn-dark mt-3" data-bs-toggle="modal" data-bs-target="#contactModal">
           <span class="flashing-text">Say Hello!!!</span>
         </button>
