Fixed Compatibility issue with wavy Lines

--- a/about.html
+++ b/about.html
@@ -163,15 +163,17 @@
     <div class="container">
       <div class="row text-center">
         <div class="col-md-4 mb-3 mb-md-0">
-          <h3 style="text-decoration: wavy underline;
-        text-decoration-color: var(--accent)">Get in Touch</h3>
+          <h3 style="text-decoration-line: underline;
+          text-decoration-style: wavy;
+          text-decoration-color: var(--accent)">Get in Touch</h3>
           <button  class="btn btn-dark mt-3" data-bs-toggle="modal" data-bs-target="#contactModal">
             <span class="flashing-text">Say Hello!!!</span>
           </button>
         </div>
         <div class="col-md-4 mb-3 mb-md-0">
-          <h4 style="text-decoration: wavy underline;
-        text-decoration-color: var(--accent)">Navigation</h4>
+          <h4 style="text-decoration-line: underline;
+          text-decoration-style: wavy;
+          text-decoration-color: var(--accent)">Navigation</h4>
           <ul class="footer-links list-unstyled">
             <li><a href="about.html">About Me</a></li>
             <li><a href="project.html">Projects</a></li>
@@ -179,8 +181,9 @@
           </ul>
         </div>
         <div class="col-md-4">
-          <h4 style="text-decoration: wavy underline;
-        text-decoration-color: var(--accent)">Connect</h4>
+          <h4 style="text-decoration-line: underline;
+          text-decoration-style: wavy;
+          text-decoration-color: var(--accent)">Connect</h4>
           <ul class="footer-links list-unstyled">
             <li><a href="https://github.com/OliseNS" target="_blank">GitHub</a></li>
             <li><a href="mailto:olisemekanmarkwe@gmail.com">Email</a></li>
