--- a/index.html
+++ b/index.html
@@ -174,8 +174,9 @@
         </button>
       </div>
       <div class="col-md-4 mb-3 mb-md-0">
-        <h4 style="text-decoration: wavy underline;
-      text-decoration-color: var(--accent)">Navigation</h4>
+        <h4 style="text-decoration-line: underline;
+        text-decoration-style: wavy;
+        text-decoration-color: var(--accent)">Navigation</h4>
         <ul class="footer-links list-unstyled">
           <li><a href="about.html">About Me</a></li>
           <li><a href="project.html">Projects</a></li>
@@ -183,8 +184,9 @@
         </ul>
       </div>
       <div class="col-md-4">
-        <h4 style="text-decoration: wavy underline;
-      text-decoration-color: var(--accent)">Connect</h4>
+        <h4 style="text-decoration-line: underline;
+        text-decoration-style: wavy;
+        text-decoration-color: var(--accent)">Connect</h4>
         <ul class="footer-links list-unstyled">
           <li><a href="https://github.com/OliseNS" target="_blank">GitHub</a></li>
           <li><a href="mailto:olisemekanmarkwe@gmail.com">Email</a></li>
