Styling the website Not done :)

--- a/project.html
+++ b/project.html
@@ -14,7 +14,7 @@
     </head>
     <body>
 <!-- Navbar -->
-<div class="d-flex justify-content-between align-items-center sticky-top" style="background: var(--background); padding: 0.5rem 1rem;">
+<div class="d-flex justify-content-between align-items-center sticky-top" style="background: var(--background); padding: 1rem;">
     <!-- Signature (Hi) on the left -->
     <div class="d-flex align-items-center" style="height: 38px;">
       <a href="index.html" class="d-flex align-items-center" style="font-size: 1.5rem; text-decoration: none; line-height: 1; height: 100%;">
