One more before i sleep So i can show it to my girlfriend

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <!-- Right Column: Introduction Text -->
     <div class="col-lg-6">
       <p class="introduction-text">
-        <strong><a href="">Olisemeka Nmarkwe</a></strong> is a motivated computer science student passionate about data analysis and machine learning. Proficient in Java, Python, SQL, and JavaScript, Olisemeka is seeking a data science internship to apply these skills and gain valuable industry experience.
+        <strong><a href="about.html">Olisemeka Nmarkwe</a></strong> is a motivated computer science student passionate about data analysis and machine learning. Proficient in Java, Python, SQL, and JavaScript, Olisemeka is seeking a data science internship to apply these skills and gain valuable industry experience.
       </p>
       <a href="assets/Olisemeka's CS 2025.pdf" class="btn btn-dark mt-3" style="height: auto; width: fit-content;" download> 
         <i class="fas fa-download" style="margin-right: 0.5rem;"> </i> Download Resume
