--- a/now.html
+++ b/now.html
@@ -97,7 +97,7 @@
       <div class="timeline-item">
         <div class="date">Once Upon a time</div>
         <div class="content">
-          <p>I stumbled upon <a href="https://eva.town/now" target="_blank">Eva.town</a>, a site that encouraged me to create creating a /now page to share brief updates on your current life, much like catching up with an old friend. It’s all about the big picture. Sounds appealing. I might just create one myself.</p>
+          <p>I stumbled upon <a href="https://eva.town/now" target="_blank">Eva.town</a>, a site that encouraged me to create a /now page to share brief updates on your current life, much like catching up with an old friend. It’s all about the big picture. Sounds appealing. I might just create one myself.</p>
         </div>
       </div>
 
