Now page update

--- a/now.html
+++ b/now.html
@@ -95,9 +95,9 @@
       </div>
 
       <div class="timeline-item">
-        <div class="date">Once Upon a time</div>
+        <div class="date">Why this page?</div>
         <div class="content">
-          <p>I stumbled upon <a href="https://eva.town/now" target="_blank">Eva.town</a>, a site that encouraged me to create a /now page to share brief updates on your current life, much like catching up with an old friend. It’s all about the big picture. Sounds appealing. I might just create one myself.</p>
+            <p>This "Now" page is a space where I share what I'm currently focused on. Inspired by <a href="https://nownownow.com/" target="_blank">NowNowNow.com</a>.</p>
         </div>
       </div>
 
