--- a/about.html
+++ b/about.html
@@ -177,7 +177,7 @@
           <h3 style="text-decoration-line: underline;
           text-decoration-style: wavy;
           text-decoration-color: var(--accent)">Get in Touch</h3>
-                  <button class="btn btn-dark mt-3" data-bs-toggle="modal" data-bs-target="#contactModal" style="background-color: #eec35e; color: #fff; font-size: 1.2rem; padding: 10px 20px; border-radius: 5px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); transition: transform 0.2s, box-shadow 0.2s;">
+                  <button class="btn btn-dark mt-3" data-bs-toggle="modal" data-bs-target="#contactModal" style="background-color: #eec35e; color: #fff; font-size: 1.2rem; padding: 10px 20px; border-radius: 5px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); transition: transform 0.2s, box-shadow 0.2s; max-width: fit-content; justify-self: center;">
                     <i class="fa-regular fa-comment fa-beat-fade fa-lg" style="margin-right: 0.5rem;"></i>
                     <span style="font-weight: bold;">Send a Message!</span>
                   </button>
