Now page more content

--- a/now.html
+++ b/now.html
@@ -97,7 +97,7 @@
       <div class="timeline-item">
         <div class="date">Why this page?</div>
         <div class="content">
-            <p>This "Now" page is a space where I share what I'm currently focused on. Inspired by <a href="https://nownownow.com/" target="_blank">NowNowNow.com</a>.</p>
+            <p>This "Now" page is a space where I share what I'm currently focused on. Inspired by <a href="https://nownownow.com/" target="_blank">NowNowNow.com</a>, it provides a snapshot of my current activities, projects, and interests. It's a way to keep myself accountable and to share my journey with others. Whether it's a new hobby, a professional milestone, or a personal goal, this page is where I document it all</p>
         </div>
       </div>
 
