Added to the now section.

--- a/now.html
+++ b/now.html
@@ -85,6 +85,15 @@
  
   <div class="container">
     <div class="timeline">
+
+      <div class="timeline-item">
+       <div class="date">January ending</div>
+        <div class="content">
+            <p>On January 21st, I experienced my first snowfall since moving to the US nearly three years ago. It was a magical moment, playing in the snow with friends. Additionally, the new semester has begun, and I'm thrilled about my project classes.
+          </p>
+        </div>
+      </div>
+
       <div class="timeline-item">
         <div class="date">January 2025</div>
         <div class="content">
