--- a/index.html
+++ b/index.html
@@ -96,13 +96,15 @@
       <p class="introduction-text">
         <strong><a href="about.html">Olisemeka Nmarkwe</a></strong> is a motivated computer science student passionate about data analysis and machine learning. Proficient in Python, SQL, and JavaScript, Olisemeka is seeking a data science or software engineering internship to apply these skills and gain valuable industry experience.
       </p>
-      <a href="assets/Olisemeka's CS 2025.pdf" class="btn btn-dark mt-3" style="height: auto; width: fit-content;" download> 
+      <a href="assets\OlisemekaResumeV2.pdf" class="btn btn-dark mt-3" style="height: auto; width: fit-content;" download> 
         <i class="fas fa-download" style="margin-right: 0.5rem;"> </i> Download Resume
       </a>
     </div>
   </div>
 </div>
 </section>
+
+
 
 <div class="container py-5">
   <h2 class="text-center mb-5">Skills & Tools</h2>
@@ -127,7 +129,7 @@
           <li><i class="fab fa-react skill-icon"></i>React</li>
           <li><i class="fab fa-python skill-icon"></i>Python</li>
           <li><i class="fas fa-database skill-icon"></i>SQL</li>
-          <li><i class="fas fa-code skill-icon"></i>Django</li>
+            <li><i class="fab fa-microsoft skill-icon"></i>.Net</li>
         </ul>
 
         <!-- Technical Skills -->
