--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       <p class="introduction-text">
         <strong><a href="about.html">Olisemeka Nmarkwe</a></strong> is a motivated computer science student passionate about data analysis and machine learning. Proficient in Python, SQL, and JavaScript, Olisemeka is seeking a data science or software engineering internship to apply these skills and gain valuable industry experience.
       </p>
-      <a href="assets\OlisemekaResumeV2.pdf" class="btn btn-dark mt-3" style="height: auto; width: fit-content;" download> 
+      <a href="assets\OlisemekaV3Resume.pdf" class="btn btn-dark mt-3" style="height: auto; width: fit-content;" download> 
         <i class="fas fa-download" style="margin-right: 0.5rem;"> </i> Download Resume
       </a>
     </div>
