launch day is coming for new website

--- a/index.html
+++ b/index.html
@@ -362,7 +362,9 @@
     setInterval(() => {
       helloMessage.textContent = messages[index];
       index = (index + 1) % messages.length;
-    }, 1500);
-  </script>
+    }, 1500);  </script>
+  
+  <!-- Redirect Modal Script -->
+  <script src="redirect-modal.js"></script>
 </body>
 </html>
