--- a/now.html
+++ b/now.html
@@ -287,5 +287,7 @@
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
 
+  <!-- Redirect Modal Script -->
+  <script src="redirect-modal.js"></script>
 </body>
 </html>
